/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.6.3/userguide/tutorial_java_projects.html
 */
plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application
    id 'application'

    id 'jacoco'
}
version = '1.0'
sourceCompatibility = '1.8'
targetCompatibility = '1.8'
repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    // implementation 'com.google.guava:guava:28.0-jre'
    // implementation 'org.processing:core:3.3.7'
    // implementation 'org.reflections:reflections:0.10.2'

    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'

    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}

application {
    // Define the main class for the application
    getMainClass().set('citadels.App')
}

test {
    // Use junit platform for unit tests
    useJUnitPlatform()
    ignoreFailures = true
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	archiveFileName = "citadels.jar"
    manifest {
        attributes 'Main-Class': 'citadels.App'
    }
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}
